fix overflow in client

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -207,15 +207,13 @@
 
 /* OUR CLIENTS */
 .our-clients-content{
-  height: 100vh;
+  min-height: 100vh;
+  height: fit-content;
   padding: 80px 0 80px 0;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  overflow-x:auto;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
 }
 .our-clients-content h2{
   color: #01013F;
@@ -230,7 +228,11 @@
   padding-right: 10px;
   background-color: white;
   margin-top: 20px;
-  padding: 10px 30px 10px 30px
+  padding: 10px 30px 10px 30px;
+  width: 100vw;
+  overflow-x:auto;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 .clients::-webkit-scrollbar { /* Hide scrollbar for Chrome, Safari and Opera */
   display: none;
